# mist-api

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
migrations/: 1.sql  2.sql  3.sql
src/: main.rs
src/app/: controller.rs  env.rs  envy.rs  errors.rs  mod.rs  service.rs
src/app/config/: mod.rs
src/app/dtos/: edit_api_status_dto.rs  mod.rs
src/app/enums/: api_status.rs  mod.rs
src/app/models/: api_error.rs  app_error.rs  json_from_request.rs  mod.rs
src/app/structs/: json_from_request.rs
src/app/util/: fcm.rs  hasher.rs  janitor.rs  mod.rs  reqwest.rs  sqlx.rs  time.rs
src/auth/: controller.rs  errors.rs  mod.rs  service.rs
src/auth/dtos/: delete_account_dto.rs  edit_email_dto.rs  edit_password_dto.rs  login_dto.rs  mod.rs  register_dto.rs  request_email_update_dto.rs
src/auth/jwt/: mod.rs
src/auth/models/: mod.rs
src/blocks/: controller.rs  service.rs
src/blocks/dtos/: get_blocks_filter_dto.rs  mod.rs
src/blocks/models/: block.rs
src/devices/: controller.rs  errors.rs  mod.rs  service.rs
src/devices/dtos/: edit_device_dto.rs  get_devices_filter_dto.rs  logout_device_dto.rs  mod.rs  refresh_device_dto.rs
src/follows/: controller.rs  service.rs
src/generate_media_requests/: controller.rs  errors.rs  mod.rs  service.rs
src/mail/: service.rs
src/media/: constants.rs  controller.rs  errors.rs  mod.rs  service.rs
src/posts/: controller.rs  errors.rs  service.rs
src/reports/: mod.rs
src/transactions/: controller.rs  mod.rs  service.rs
src/users/: controller.rs  errors.rs  mod.rs  service.rs
(+174 files in other folders)
