[package]
name = "mist-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.0-rc.2", features = ["headers", "multipart"] }
axum-macros = "0.3.0-rc.1"
tokio = { version = "1.20", features = ["full"] }
tower-http = { version = "0.3.0", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
argon2 = "0.4.1"
rand = "0.8.5"
jsonwebtoken = "8.1.1"
dotenvy = "0.15.6"
validator = { version = "0.16.0", features = ["derive"] }
reqwest = { version = "0.11.12", features = ["json"] }
mime = "0.3.16"
uuid = { version = "1.2.1", features = ["v4"] }
b2_backblaze = "0.1.3"
bytes = "1.2.1"
imagesize = "0.10.1"
openssl = { version = "0.10", features = ["vendored"] }
fcm = "0.9.2"
futures = "0.3.25"
lettre = { version = "0.10.1", features = ["builder", "tokio1-rustls-tls", "tokio1-native-tls"] }
envy = "0.4"
regex = "1.7.0"
lazy_static = "1.4.0"